2008-07-20  kitone  <kitone@gna.org>

	* src/Encodings.h:
	Fix: gcc warning.
	
	* share/glade/Makefile.am:
	* share/glade/dialog-export-text.glade:
	* share/glade/dialog-import-text.glade:
	* share/glade/dialog-open-document.glade:
	* share/glade/dialog-save-document.glade:
	Add new files.

	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	* src/gui/DialogUtility.cc:
	* src/gui/DialogUtility.h:
	Improved of the dialogs file chooser (glade files), clean code.
	Added option to open video directly with a subtitle.

	* src/actions/DocumentManagement.cc:
	Fix: #11938 (https://gna.org/bugs/?11938)
	Used the new dialog and added the support of the automatic video search.

	* src/actions/JoinDocument.cc:
	* src/actions/Transcript.cc:
	Used the new dialog.

2008-07-08  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Player.h:
	* src/actions/VideoPlayerManagement.cc:
	* src/vp/GStreamerPlayer.cc:
	* src/vp/GStreamerPlayer.h:
	Fix: #11938
	Add "Close" player.

2008-07-02  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	Fix: #11893 (https://gna.org/bugs/?11893)
	Escape key canceled the change.
	Can choose between "Enter" or "Ctrl+Enter" to confirm the change.

	* share/glade/dialog-preferences.glade:
	* src/gui/PreferencesUI.cc:
	Add option "Used Ctrl+Enter to confirm the change"
	
	* src/main.cc:
	Fix: add default renderer "cairo".
	Add default value to "used-ctrl-enter-to-confirm-changed".

2008-07-02  kitone  <kitone@gna.org>

	* src/formats/SubtitleMicroDVD.cc:
	The frame is now really supported thanks to the support of the frames.

2008-07-01  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/TimeModeManagement.cc:
	Add new file TimeModeManagement.cc.
	Time mode management and framerate values.

2008-07-01  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Add support of the frame.

2008-07-01  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/Document.h:
	* src/Subtitle.cc: